[gd_scene load_steps=30 format=3 uid="uid://y8tikcdkscmp"]

[ext_resource type="Script" path="res://scripts/player/player.gd" id="1_t632k"]
[ext_resource type="Script" path="res://scripts/player/Gun.gd" id="2_hv4jb"]
[ext_resource type="ArrayMesh" uid="uid://qmob0f5n537u" path="res://assets/models/gun/gun.obj" id="2_tb4pv"]
[ext_resource type="Script" path="res://scripts/player/Flashlight.gd" id="2_tkn5c"]
[ext_resource type="Script" path="res://scripts/states/IdlePlayerState.gd" id="3_w16fx"]
[ext_resource type="Script" path="res://scripts/states/WalkingPlayerState.gd" id="4_8d7vn"]
[ext_resource type="AudioStream" uid="uid://yftxccnjkkpt" path="res://assets/meltona_sfx_shot.ogg" id="5_c44mp"]
[ext_resource type="Script" path="res://scripts/states/StateMachine.gd" id="6_op6vo"]
[ext_resource type="Script" path="res://scripts/states/SprintingPlayerState.gd" id="9_n7iqi"]
[ext_resource type="Script" path="res://scripts/states/CrouchingPlayerState.gd" id="10_i6di3"]
[ext_resource type="Script" path="res://scripts/Menu.gd" id="10_p10j3"]
[ext_resource type="Texture2D" uid="uid://dxktqnv2pb3vt" path="res://assets/dev/grids/Orange/texture_05.png" id="11_5slc7"]
[ext_resource type="Script" path="res://scripts/states/SlidingPlayerState.gd" id="11_rs6mb"]
[ext_resource type="Script" path="res://scripts/player/Reticle.gd" id="12_ailde"]
[ext_resource type="Script" path="res://scripts/components/HealthComponent.gd" id="14_7xj04"]
[ext_resource type="AudioStream" uid="uid://c02miougs4qal" path="res://assets/meltona_bg.ogg" id="16_7d60b"]
[ext_resource type="Script" path="res://scripts/components/PlayerHurtComponent.gd" id="16_ohhed"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_p056g"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_tsecy"]

[sub_resource type="Animation" id="Animation_344wh"]
resource_name = "Shoot"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.02, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, -1.5708, 0), Vector3(0, -1.5708, -0.436332), Vector3(0, -1.5708, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0.05), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dmrr2"]
_data = {
"Shoot": SubResource("Animation_344wh")
}

[sub_resource type="SphereShape3D" id="SphereShape3D_rsa70"]

[sub_resource type="Animation" id="Animation_hs5ke"]
resource_name = "Crouch"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:shape:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0, 1.5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1, 0), Vector3(0, 0.75, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraController:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1.5, 0), Vector3(0, 1, 0)]
}

[sub_resource type="Animation" id="Animation_kptlg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:shape:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraController:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1.5, 0)]
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CameraController:position:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CameraController:position:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1.5, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CameraController:position:z")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/6/type = "bezier"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CameraController/Camera3D:position:z")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("CameraController/Hand/Gun:rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, -1.5708, 0)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("CameraController/Hand/Gun:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_aasla"]
resource_name = "Shoot"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CameraController/Hand/Gun:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.02, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, -1.5708, 0), Vector3(0, -1.5708, -0.436332), Vector3(0, -1.5708, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CameraController/Hand/Gun:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0.05), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_2vacy"]
resource_name = "Walking"
length = 2.0
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CameraController/Camera3D:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.2, 0.0286235, 0.05, -0.25, 0, 0.2, -0.00247395, 0, -0.2, 0.0238979, 0.2, -0.0292654, -0.05, -0.25, 0, 0.25, 0, 0, -0.2, -0.0345817, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 0.9, 1.5, 2)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CameraController/Camera3D:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(0.05, -0.25, 0, 0.1, 0.00803316, 0.05, -0.1, 0.00261033, 0.1, -0.0172597, 0, -0.1, 0.0434874, 0.1, 0.0358901, 0.05, -0.25, 0, 0.402176, -0.00334466, 0, -0.197824, 0.0409842, 0.202176, 0.0409842, 0.05, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.3, 0.5, 1, 1.5, 2)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/path = NodePath("CameraController:position:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 0.9)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CameraController/Camera3D:position:z")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(),
"points": PackedFloat32Array(),
"times": PackedFloat32Array()
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ty570"]
_data = {
"Crouch": SubResource("Animation_hs5ke"),
"RESET": SubResource("Animation_kptlg"),
"Shoot": SubResource("Animation_aasla"),
"Walking": SubResource("Animation_2vacy")
}

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_amr5c"]
albedo_texture = ExtResource("11_5slc7")
uv1_scale = Vector3(2, 2, 2)
uv1_triplanar = true

[sub_resource type="CylinderShape3D" id="CylinderShape3D_pb1mg"]
radius = 0.6

[node name="player" type="CharacterBody3D"]
script = ExtResource("1_t632k")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_p056g")

[node name="MeshInstance3D" type="MeshInstance3D" parent="CollisionShape3D"]
mesh = SubResource("CapsuleMesh_tsecy")

[node name="CameraController" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="Camera3D" type="Camera3D" parent="CameraController"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, 0)

[node name="SpotLight3D" type="SpotLight3D" parent="CameraController/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.223705, -0.821701)
light_energy = 0.7
shadow_enabled = true
spot_range = 20.0
spot_angle = 22.4
spot_angle_attenuation = 4.0
script = ExtResource("2_tkn5c")

[node name="Hand" type="Node3D" parent="CameraController"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.245, -0.27, -0.28)
script = ExtResource("2_hv4jb")
gun_cooldown = 0.5

[node name="Gun" type="MeshInstance3D" parent="CameraController/Hand"]
transform = Transform3D(-1.81e-07, 0, -0.05, 0, 0.05, 0, 0.05, 0, -1.81e-07, 0, 0, 0)
mesh = ExtResource("2_tb4pv")
skeleton = NodePath("../../..")

[node name="GunAnimationPlayer" type="AnimationPlayer" parent="CameraController/Hand/Gun"]
libraries = {
"": SubResource("AnimationLibrary_dmrr2")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="CameraController/Hand"]
stream = ExtResource("5_c44mp")

[node name="ShotRayCast" type="RayCast3D" parent="CameraController"]
target_position = Vector3(0, 0, -100)
collision_mask = 2
hit_from_inside = true
collide_with_areas = true
collide_with_bodies = false

[node name="ShapeCast3D" type="ShapeCast3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
shape = SubResource("SphereShape3D_rsa70")
target_position = Vector3(0, 0.5, 0)

[node name="PlayerStateMachine" type="Node" parent="." node_paths=PackedStringArray("current_state")]
script = ExtResource("6_op6vo")
current_state = NodePath("IdlePlayerState")

[node name="IdlePlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("3_w16fx")
deceleration = 1.0

[node name="WalkingPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("4_8d7vn")
speed = 3.0

[node name="SprintingPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("9_n7iqi")
speed = 6.0
deceleration = 1.0

[node name="CrouchingPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("10_i6di3")

[node name="SlidingPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("11_rs6mb")
speed = 6.0
max_slide_time = 2.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ty570")
}

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Reticle" type="CenterContainer" parent="Control" node_paths=PackedStringArray("player_controller")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("12_ailde")
player_controller = NodePath("../..")

[node name="Menu" type="CenterContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("10_p10j3")

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Menu"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/Menu/VBoxContainer"]
layout_mode = 2
text = "Paused"

[node name="Resume" type="Button" parent="Control/Menu/VBoxContainer"]
layout_mode = 2
text = "Return"

[node name="Button" type="Button" parent="Control/Menu/VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="GridContainer" type="GridContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
columns = 3

[node name="CSGBox3D" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.477875, 1.52191, -3.48376)
visible = false
material_override = SubResource("StandardMaterial3D_amr5c")
size = Vector3(7.61438, 4.04382, 1)

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("14_7xj04")

[node name="HurtComponent" type="Area3D" parent="."]
collision_layer = 16
collision_mask = 16
script = ExtResource("16_ohhed")

[node name="CollisionShape3D" type="CollisionShape3D" parent="HurtComponent"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CylinderShape3D_pb1mg")

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_7d60b")
volume_db = -9.377
autoplay = true

[connection signal="menu_pressed" from="." to="Control/Menu" method="_on_player_menu_pressed"]
[connection signal="pressed" from="Control/Menu/VBoxContainer/Resume" to="Control/Menu" method="_on_button_pressed"]
[connection signal="button_up" from="Control/Menu/VBoxContainer/Button" to="Control/Menu" method="_on_button_button_up"]
[connection signal="area_entered" from="HurtComponent" to="HurtComponent" method="_on_area_entered"]
